--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,12 @@
 main {
   min-height: 80vh;
 }
+
+strong {
+  display: inline-block;
+  padding: 15px 0 60px 0;
+}
+
+h1 {
+  padding-top: 20px;
+}
