--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,55 @@ strong {
 .guestSignIn {
   padding-top: 50px;
 }
+
+.placeHolder {
+  max-width: 100%;
+  max-height: 100%;
+  background-color: rgb(238, 252, 252);
+}
+
+.pass {
+  margin: auto;
+  width: 50%;
+  border: 3px solid red;
+  border-radius: 10px;
+  height: 250px;
+  width: 475px;
+}
+
+.passTitleRow {
+  text-align: center;
+  background-color: red;
+  border-bottom: 3px solid red;
+}
+
+.passTitleRow h1 {
+  color: white;
+  margin: auto;
+}
+
+.visitorImgCol {
+  padding: 5px;
+  float: left;
+}
+
+.visitorTextCol {
+  float: left;
+}
+
+.left {
+  width: 40%;
+}
+
+.right {
+  width: 60%;
+}
+
+.passImage {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.passText {
+  padding: 10px;
+}
