--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,8 @@ strong {
   max-width: 100%;
   max-height: 100%;
   background-color: rgb(238, 252, 252);
+  margin: auto;
+  display: block;
 }
 
 .pass {
